--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,7 +18,7 @@
 
   --color-primaryLight-100: var(--color-zinc-200);
   --color-primaryLight-200: var(--color-zinc-100);
-  --color-primaryLight-300: var(--color-zinc-50);
+  --color-primaryLight-300: var(--color-white);
 
   --color-textLight-100: var(--color-black);
   --color-textLight-200: var(--color-zinc-950);
